--- a/webclient/package.json
+++ b/webclient/package.json
@@ -37,7 +37,7 @@
     "@harmony-js/crypto": "^0.1.56",
     "@truffle/contract": "^4.1.1",
     "bip39": "^2.5.0",
-    "bootstrap": "^5.1.0",
+    "bootstrap": "5.1.0",
     "bootstrap-icons": "^1.5.0",
     "crypto": "^1.0.1",
     "fs": "0.0.1-security",
@@ -47,6 +47,7 @@
     "jsqr": "^1.2.0",
     "jssha": "^3.2.0",
     "lodash": "^4.17.10",
+    "moment": "^2.29.1",
     "node-2fa": "^2.0.2",
     "otplib": "^12.0.1",
     "prop-types": "^15.7.2",
@@ -58,6 +59,8 @@
     "react-notify-toast": "^0.5.1",
     "react-otp-input": "^2.3.1",
     "react-router-dom": "^5.2.0",
+    "react-toast-notifications": "^2.4.4",
+    "react-use-clipboard": "^1.0.7",
     "redux-zero": "^5.1.7",
     "schema-utils": "^1.0.0",
     "thirty-two": "^1.0.2",
