--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   },
   "name": "@hashmesan/smartvault",
   "homepage": "https://github.com/hashmesan/harmony-totp",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "license": "GPL-3.0",
   "bin": {
     "smartvault": "cli/smartvault.js"
@@ -14,7 +14,7 @@
     "@chainlink/contracts": "^0.2.1",
     "@harmony-js/core": "^0.1.57",
     "@harmony-js/crypto": "^0.1.56",
-    "@openzeppelin/contracts": "^4.2.0",
+    "@openzeppelin/contracts": "^4.3.1",
     "@truffle/contract": "^4.3.21",
     "@truffle/hdwallet-provider": "^1.4.1",
     "@venomswap/sdk": "^1.1.2",
@@ -45,5 +45,8 @@
     "web3-eth-abi": "^1.3.5",
     "web3-eth-accounts": "^1.3.6",
     "web3-utils": "^1.3.6"
+  },
+  "devDependencies": {
+    "git-revision-webpack-plugin": "^5.0.0"
   }
 }
